main/bin/main.48710.temp/main.log
/home/leifu/agent_based_epidemic_simulation_using_fpga/main/device/main.cl:75:6: warning: scoped enumerations are a C++11 extension
enum struct Severity {
     ^
/home/leifu/agent_based_epidemic_simulation_using_fpga/main/device/main.cl:217:21: error: use of undeclared identifier 's'
                if (s > Rands[index])
                    ^
1 warning and 1 error generated.
